# voodoo-doll

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs  skaffold.yaml
.github/workflows/: assert_versions.yaml  build_publish_container.yaml  build_publish_js_ts_client.yaml  integration_test.yml
clients/typescript/: .editorconfig  .env  README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: index.ts  index.ts.bak  test.ts
clients/typescript/src/lib/: protocol.ts
kubernetes/: clusterrole.json  clusterrolebinding.json  kustomization.yaml  pod.json  serviceaccount.json
src/: client.rs  control_plane.rs  fspiop_handlers.rs  lib.rs  main.rs  manifest.json  protocol.rs
src/client/: consts.rs
tests/: default.nix  system.rs
