[package]
name = "voodoo-doll"
version = "0.4.1"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.6" }
hyper = "0.14"
warp = "0.3"
futures = "0.3"
fspiox-api = { git = "https://github.com/partiallyordered/fspiox-api", rev = "71077473df01cbab245fe334690848dbba998f23", features = ["fsp_http", "typescript_types"] }
# fspiox-api = { path = "/home/msk/projects/github.com/msk-/fspiox-api/", features = ["fsp_http", "typescript_types"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
mojaloop-api = { git = "https://github.com/partiallyordered/mojaloop-api", rev = "ea15750b6ddbd1e7902731ea932186e204e8ecd3", features = ["typescript_types"] }
# mojaloop-api = { path = "/home/msk/projects/github.com/msk-/mojaloop-api/", features = ["typescript_types"] }
gethostname = "0.2"
thiserror = "1.0"
strum = "0.21"
rand = { version = "0.8", features = ["std_rng"] }
regex = "1.5.4"
lazy_static = "1.4.0"

# optional
# At the time of writing we need to use the git version as internally tagged unions are not yet in
# a released crate. Generally speaking, we might prefer externally tagged enums, There's an issue
# for that here: https://github.com/Aleph-Alpha/ts-rs/issues/10
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "ddd461522591a90b987b22dd05e06cfccbea6f5a", optional = true }

[features]
typescript_types = ["ts-rs"]
