[package]
name = "voodoo-doll"
version = "0.10.2"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.6" }
hyper = "0.14"
warp = "0.3"
futures = "0.3"
fspiox-api = { git = "https://github.com/partiallyordered/fspiox-api", rev = "b2f7cdb2a2b0d914b8eb1fbc0ff885874bc09304", features = ["fsp_http", "typescript_types"] }
# fspiox-api = { path = "/home/msk/projects/github.com/msk-/fspiox-api/", features = ["fsp_http", "typescript_types"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
mojaloop-api = { git = "https://github.com/partiallyordered/mojaloop-api", rev = "ee7560c5592e5c3991a13f69e07b451b2794bba6", features = ["typescript_types", "clients-kube"] }
# mojaloop-api = { path = "/home/msk/projects/github.com/msk-/mojaloop-api/", features = ["typescript_types", "clients-kube"] }
thiserror = "1.0"
strum = "0.21"
rand = { version = "0.8", features = ["std_rng"] }
regex = "1.5.4"
lazy_static = "1.4.0"
tokio-tungstenite = "0.14"
kube = { git = "https://github.com/partiallyordered/kube-rs", rev = "46a777178779e6b0895f53ca8202eb7325315230", features = ["ws"] }
kube-runtime = { version = "0.60.0" }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21"] }

# optional
# At the time of writing we need to use the git version as internally tagged unions are not yet in
# a released crate. Generally speaking, we might prefer externally tagged enums, There's an issue
# for that here: https://github.com/Aleph-Alpha/ts-rs/issues/10
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "ddd461522591a90b987b22dd05e06cfccbea6f5a", optional = true }

[features]
typescript_types = ["ts-rs"]

[build-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
